--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -7,6 +7,7 @@ Register Page
 <body class="text-center">
     <div class="container">
         <form method="POST" class="form-register" style="color:white">
+            {{ form.hidden_tag() }}
             <img class="mb-4" src="https://img.icons8.com/nolan/256/flask.png" alt="">
             <h1 class="h1 mb-1 font-weight-normal">
                         Mock Market Using Flask
@@ -24,10 +25,12 @@ Register Page
             {{ form.email_address(class="form-control", placeholder="Email Address") }}
 
             {{ form.password1.label() }}
-            {{ form.password2(class="form-control", placeholder="Password") }}
+            {{ form.password1(class="form-control", placeholder="Password") }}
 
             {{ form.password2.label() }}
             {{ form.password2(class="form-control", placeholder="Confirm Password") }}
+
+            <br>
 
             {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
 
