--- a/market/templates/home.html
+++ b/market/templates/home.html
@@ -1,8 +1,17 @@
 {% extends 'base.html' %}
 {% block title %}
-Home Page
+    Welcome to Jules Mock Online Market
 {% endblock %}
-
 {% block content %}
-    This is our content for the Home Page
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark" style="color:white">
+        <div class="col-md-5 p-lg-5 mx-auto my-5">
+            <img class="mb-1" src="https://img.icons8.com/nolan/256/flask.png" alt="">
+            <h1 class="display-3 font-weight-normal">Jules Mock Online Market</h1>
+            <h3 class="display-4 font-weight-medium">Made With Flask and Bootstrap</h3>
+            <p class="lead font-weight-normal">Start purchasing products by clicking the link below</p>
+            <a class="btn btn-primary" href="{{ url_for('register_page') }}">Get Started</a>
+        </div>
+        <div class="product-device box-shadow d-none d-md-block"></div>
+        <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+    </div>
 {% endblock %}
