--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -10,7 +10,7 @@ Register Page
             {{ form.hidden_tag() }}
             <img class="mb-4" src="https://img.icons8.com/nolan/256/flask.png" alt="">
             <h1 class="h3 mb-3 font-weight-normal">
-                Please Login
+                Please Login to access the Market
             </h1>
             <br>
             {{ form.username.label() }}
@@ -23,7 +23,7 @@ Register Page
 
 
             <div class="checkbox mb-3">
-               <h6>Do not have an account?</h6>
+               <h6>Don't have an account?</h6>
                <a class="btn btn-sm btn-secondary" href="{{ url_for('register_page') }}">Register</a>
             </div>
 
