--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -32,7 +32,7 @@ Register Page
 
             <br>
             <div class="checkbox mb-3">
-               <h6>Already have an account?</h6>
+               <h6>Already made an account?</h6>
                <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Login</a>
             </div>
             {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
